# PRSK_Editor

./: .gitignore  Main.spec  Main_MacOS.spec  README.md  answer.txt  log.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data/: 022004_rin01.json  022004_rin02.json  event_02_miku_01.json  event_15_01.json  event_15_03.json  event_15_08.json  event_20_02.json  event_23_03.json  event_25_01.json  event_29_06.json  event_31_02.json  event_32_02.json  event_32_03.json  event_32_04.json  event_32_05.json  event_32_06.json  event_32_07.json  event_32_08.json  event_33_01.json  event_33_02.json  event_33_03.json  event_33_04.json  event_33_05.json  event_33_06.json  event_33_07.json  event_33_08.json  event_34_01.json  event_34_02.json  event_34_03.json  event_34_04.json  event_34_05.json  event_34_06.json  event_34_07.json  event_34_08.json  event_34_ichika_01.json  event_35_01.json  event_35_02.json  event_35_03.json  event_35_04.json  event_35_05.json  (+9 more)
image/icon/: 256.icns  32.icns
setting/: cards.json  chr.json  events.json  festivals.json  mainStory.json  setting.json
src/: Dictionary.py  Editor.py  Flashback.py  JsonLoader.py  ListManager.py  Loader.py  Main.pyw  TableArranger.py  chr.py  editor.py  loader.py  main.py  mainGUI - 副本.py  mainGUI.py  mainGUI.ui
